# CorenessMaximization

./: CMakeLists.txt  DataGraph.cpp  DataGraph.h  Master.cpp  Master.h  Partition.cpp  Partition.h  README.md  main.cpp  run.sh
